typography and twitter

--- a/jekyll-src/index.html
+++ b/jekyll-src/index.html
@@ -11,5 +11,36 @@ layout: main
 A Start.Home is simple, elegant, and affordable. Whether you’re well versed in clean technology, or just hoping to invest in a home that can grow with you, Start.Home makes living green as simple as pushing a button.
 </p>
 <iframe class="youtube" style="height:328px;width:540px" src="http://www.youtube.com/embed/rdXcOrTS5e8?autohide=2&amp;controls=1&amp;disablekb=0&amp;fs=1&amp;hd=0&amp;loop=0&amp;rel=0&amp;showinfo=0&amp;showsearch=0&amp;wmode=transparent" width="540" height="328" frameborder="0"></iframe>
+
+<script charset="utf-8" src="http://widgets.twimg.com/j/2/widget.js"></script>
+<script>
+new TWTR.Widget({
+  version: 2,
+  type: 'search',
+  search: '#sd2013',
+  interval: 30000,
+  title: 'Solar Decathlon 2013',
+  subject: 'Start.tweets',
+  width: 250,
+  height: 300,
+  theme: {
+    shell: {
+      background: '#8fd998',
+      color: '#ffffff'
+    },
+    tweets: {
+      background: '#ffffff',
+      color: '#444444',
+      links: '#19b33d'
+    }
+  },
+  features: {
+    scrollbar: false,
+    loop: true,
+    live: true,
+    behavior: 'default'
+  }
+}).render().start();
+</script>
 </div>
 
